Refactoring (smaller functions), context handling, and more callback options (http type, request body)
